feat(order): 添加 Feign 客户端并集成配置中心
- 在 order 服务中添加 ProductFeignClient 和 OpenApiClient 接口
- 更新 application.yml 配置，关闭配置导入检查
- 修改 OrderServiceImpl，使用 Feign 客户端调用产品服务和第三方 API

--- a/service-order/src/main/resources/application.yml
+++ b/service-order/src/main/resources/application.yml
@@ -6,3 +6,7 @@ spring:
   cloud:
     nacos:
       server-addr: 127.0.0.1:8848
+      config:
+        # 由于统一导入了配置中心依赖 而本服务暂不需要导入配置 需关闭启动时导入检查
+        import-check:
+          enabled: false
