docs(README): 更新项目文档- 新增 README.md 文件，包含微服务组件说明、配置示例、启动顺序等信息 - 更新 application.yml 文件，添加 Nacos、Sentinel、OpenFeign等配置 - 新增 gateway模块，实现 API 网关功能 - 更新 service-order 和 service-product 模块，集成 Sentinel 和 OpenFeign - 新增全局异常处理和自定义限流异常处理器 - 新增请求拦截器，实现 x-token 添加和验证

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>service-product</module>
         <module>service-order</module>
         <module>common-model</module>
+        <module>gateway</module>
     </modules>
     <packaging>pom</packaging>
 
