feat(gateway): 添加自定义过滤器和断言
- 新增 MyCustomGatewayFilterFactory 自定义过滤器工厂
- 新增 MyGlobalFilter 全局过滤器
- 新增 VipRoutePredicateFactory 自定义断言工厂
- 更新 application-route.yml 配置示例

--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -28,6 +28,10 @@
 <!--            <artifactId>netty-resolver-dns-native-macos</artifactId>-->
 <!--            <version>4.1.119.Final</version> &lt;!&ndash; 请根据你的项目选择合适的版本 &ndash;&gt;-->
 <!--        </dependency>-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
